ciao-apigateway-k8s.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: apigw-deployment
  namespace: ciao
  labels:
    app: apigateway
    env: production
    project: ciao-socialmedia

spec: 
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template: 
    metadata: 
      name: apigw-pod
      labels: 
        app: apigateway
    spec:
      containers:
        - name: apigw-service
          image: ashkarax/ciao_apigw:latest
          ports:
            - containerPort: 3000
            
---
apiVersion: v1
kind: Service
metadata:
  name: apigw-service
  namespace: ciao
  labels:
    app: apigateway
    env: production 
    project: ciao-socialmedia

spec:
  type: NodePort
  selector:
    app: apigateway
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
