ciao-chatncallsvc-k8s.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: chatncallsvc-deployment
  namespace: ciao
  labels:
    app: chatncallsvc
    env: production
    project: ciao-socialmedia

spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatncallsvc
  template:
    metadata:
      name: chatncallsvc-pod
      labels:
        app: chatncallsvc
    spec:
      containers:
        - name: chatncall-service
          image: ashkarax/ciao_chatncallsvc:latest
          ports:
            - containerPort: 50053
---
apiVersion: v1
kind: Service

metadata:
  name: chatncallsvc-service
  namespace: ciao
  labels:
    app: chatncallsvc
    env: production
    project: ciao-socialmedia

spec:
  type: ClusterIP
  selector:
    app: chatncallsvc
  ports:
    - port: 50053
      targetPort: 50053
