ciao-postgres-notifsvc-k8s.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: postgres-notifsvc-deployment
  namespace: ciao
  labels:
    app: notifsvc-db
    env: production
    project: ciao-socialmedia

spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifsvc-db
  template:
    metadata:
      name: postgres-notifsvc-pod
      labels:
        app: notifsvc-db
    spec:
      containers:
        - name: postgres
          image: postgres:14
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres-notifsvc-subpath
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: my-storage-class
        resources:
          requests:
            storage: 100Mi

---

apiVersion: v1
kind: Service

metadata:
    name: notifsvc-db
    namespace: ciao
    labels:
      app: notifsvc-db
      env: production
      project: ciao-socialmedia
spec:
  type: ClusterIP
  selector:
    app: notifsvc-db
  ports:
    - port: 5430
      targetPort: 5432
