ciao-postnrelService-k8s.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postnrelsvc-deployment
  namespace: ciao
  labels:
    app: postnrelsvc
    env: production
    project: ciao-socialmedia

spec:
  replicas: 1
  selector:
    matchLabels:
      app: postnrelsvc
  template:
    metadata:
      name: postnrelsvc-pod
      labels:
        app: postnrelsvc
    spec:
      containers:
        - name: postnrelsvc-service
          image: ashkarax/ciao_postnrelsvc:latest
          ports:
            - containerPort: 50052
---
apiVersion: v1
kind: Service

metadata:
  name: postnrelsvc-service
  namespace: ciao
  labels:
    app: postnrelsvc
    env: production
    project: ciao-socialmedia

spec:
  type: ClusterIP
  selector:
    app: postnrelsvc
  ports:
    - port: 50052
      targetPort: 50052
