ciao_ingress-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciao-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - k8s.ciao.ashkar.tech
    secretName: ciao-tls
  rules:
    - host: k8s.ciao.ashkar.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: apigw-service
                port:
                  number: 30001
