ingress-resource-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciao-ingress
spec:
  rules:
  - host: k8s.ciao.ashkar.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend: 
          service: 
            name: apigw-service
            port: 
              number: 30001
